--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   height: 100vh;
   width: 100vw;
@@ -13,15 +13,15 @@ body {
 }
 
 .error {
-  color: #f05305;
+  color: #f00505;
 }
 
 .marker.red path {
-  fill: #f05305;
+  fill: #1505f0;
 }
 
 .marker.yellow path {
-  fill: #F3B73E;
+  fill: #ffb114;
 }
 
 .popup {
@@ -36,7 +36,7 @@ body {
   margin: 0 auto;
   display: block;
 }
-
+.entry-form,
 .entry-form label,
 .entry-form input,
 .entry-form textarea,
